fix: Broken looking styles when subscribe input is clicked on mobiles

--- a/wordpress/wp-content/themes/astra-child/assets/css/components/_gp-mobile-header.scss
+++ b/wordpress/wp-content/themes/astra-child/assets/css/components/_gp-mobile-header.scss
@@ -1,5 +1,5 @@
 .gp-mobile-header {
-  height: calc(100vh - 96px);
+  height: calc(100% - 96px);
   top: 96px;
   z-index: 2;
   background: white;
