--- a/wordpress/wp-content/themes/astra-child/assets/css/main.css
+++ b/wordpress/wp-content/themes/astra-child/assets/css/main.css
@@ -99,7 +99,7 @@
 }
 
 .gp-mobile-header {
-  height: calc(100vh - 96px);
+  height: calc(100% - 96px);
   top: 96px;
   z-index: 2;
   background: white;
@@ -335,6 +335,7 @@
 }
 
 .stop-scrolling {
+  position: fixed !important;
   overflow: hidden !important;
 }
 
