--- a/wordpress/wp-content/themes/astra-child/assets/css/partials/_global.scss
+++ b/wordpress/wp-content/themes/astra-child/assets/css/partials/_global.scss
@@ -1,3 +1,4 @@
 .stop-scrolling {
+  position: fixed !important;
   overflow: hidden !important;
 }
